  FileUtil.serializeToFile() and deserializeFromFile() now throw IOException instead of SerializeException
  EntityEditPanel, EntityEditView, clear now requests initial focus
  TextInputPanel bug fixed, text field now receives focus when input panel is closed, now uses SizedDocument
  EntityEditModel and EntityApplicationModel is/setWarnAboutUnsavedData() added
  SwingFilteredComboBoxModel.setSelectedItem() bug fixed, allowSelectionChange() was called prematurely
  ResultPacker.pack() default implementation added
  ClientUserMonitor, clientVersion and frameworkVersion columns added to user history table
  UiUtil.getFileDataFlavor() renamed to getTransferFiles(), now handles multiple files
  EntityApplicationModel.savePreferences() added, called from EntityApplicationPanel and EntityApplicationView
  EntityPanel, EntityView, savePreferences() is no longer final and does not call model.savePreferences()
  Demo gradle run tasks now ant based, running multiple applications from different modules via gradle JavaExec did not work due to NoClassDefFoundError
  ServerMonitor, GC event types no longer hardcoded
  Gradle run tasks reverted back to gradle JavaExec, problem was jar manifest timestamp entry which resulted in jar task never being up-to-date, which killed the classpath of a running application
  EntityEditPanel.getSelectComponentPropertyIds() bug fixed, did not take isDisplayable() into account, refactored
  EntityEditView.selectInputControl() refactored
  LocalEntityConnection.update() now rollbacks and throws exception in case the number of selected rows does not match the number of rows to update
  ResultIterator now extends AutoCloseable
  jminor.server.pooling.initial server configuration key changed to jminor.server.pooling.startupPoolUsers
  domainJar gradle task added to demo projects, experimenting with server application configuration (not working yet)
  DefaultEntityModel.savePreferences() now calls savePreferences() for all detail models