@@ -60,10 +60,9 @@ compileTestJava {
 }
 
 task runClientLocal(type: JavaExec) {
+    group 'run'
     main = 'org.jminor.framework.demos.empdept.client.ui.EmpDeptAppPanel'
-
     classpath = sourceSets.main.runtimeClasspath
-
     systemProperties = [
             'jminor.client.connectionType': 'local',
             'jminor.db.type': 'h2',
@@ -77,10 +76,9 @@ task runClientLocal(type: JavaExec) {
 }
 
 task runClientFXLocal(type: JavaExec) {
+    group 'run'
     main = 'org.jminor.framework.demos.empdept.javafx.EmpDeptFX'
-
     classpath = sourceSets.main.runtimeClasspath
-
     systemProperties = [
             'jminor.client.connectionType': 'local',
             'jminor.db.type': 'h2',
@@ -94,10 +92,9 @@ task runClientFXLocal(type: JavaExec) {
 }
 
 task runClientRemote(type: JavaExec) {
+    group 'run'
     main = 'org.jminor.framework.demos.empdept.client.ui.EmpDeptAppPanel'
-
     classpath = sourceSets.main.runtimeClasspath
-
     systemProperties = [
             'jminor.client.connectionType': 'remote',
             'jminor.server.hostname': 'localhost',
@@ -109,10 +106,9 @@ task runClientRemote(type: JavaExec) {
 }
 
 task runClientHttp(type: JavaExec) {
+    group 'run'
     main = 'org.jminor.framework.demos.empdept.client.ui.EmpDeptAppPanel'
-
     classpath = sourceSets.main.runtimeClasspath
-
     systemProperties = [
             'jminor.client.connectionType': 'http',
             'jminor.server.hostname': 'localhost',
@@ -122,10 +118,9 @@ task runClientHttp(type: JavaExec) {
 }
 
 task runLoadTestRemote(type: JavaExec) {
+    group 'run'
     main = 'org.jminor.framework.demos.empdept.testing.EmpDeptLoadTest'
-
     classpath = sourceSets.main.runtimeClasspath
-
     systemProperties = [
             'jminor.client.connectionType': 'remote',
             'jminor.server.hostname': 'localhost',
@@ -137,10 +132,9 @@ task runLoadTestRemote(type: JavaExec) {
 }
 
 task runLoadTestHttp(type: JavaExec) {
+    group 'run'
     main = 'org.jminor.framework.demos.empdept.testing.EmpDeptLoadTest'
-
     classpath = sourceSets.main.runtimeClasspath
-
     systemProperties = [
             'jminor.client.connectionType': 'http',
             'jminor.server.hostname': 'localhost',
