@@ -21,10 +21,9 @@ domainJar {
 }
 
 task runClientLocal(type: JavaExec) {
+    group 'run'
     main = 'org.jminor.framework.demos.petstore.client.ui.PetstoreAppPanel'
-
     classpath = sourceSets.main.runtimeClasspath
-
     systemProperties = [
             'jminor.client.connectionType': 'local',
             'jminor.db.type': 'h2',
@@ -37,10 +36,9 @@ task runClientLocal(type: JavaExec) {
 }
 
 task runClientRemote(type: JavaExec) {
+    group 'run'
     main = 'org.jminor.framework.demos.petstore.client.ui.PetstoreAppPanel'
-
     classpath = sourceSets.main.runtimeClasspath
-
     systemProperties = [
             'jminor.client.connectionType': 'remote',
             'jminor.server.hostname': 'localhost',
@@ -51,10 +49,9 @@ task runClientRemote(type: JavaExec) {
 }
 
 task runClientHttp(type: JavaExec) {
+    group 'run'
     main = 'org.jminor.framework.demos.petstore.client.ui.PetstoreAppPanel'
-
     classpath = sourceSets.main.runtimeClasspath
-
     systemProperties = [
             'jminor.client.connectionType': 'http',
             'jminor.server.hostname': 'localhost',
