@@ -4697,3 +4697,5 @@
   jminor.server.pooling.initial server configuration key changed to jminor.server.pooling.startupPoolUsers
   domainJar gradle task added to demo projects, experimenting with server application configuration (not working yet)
   DefaultEntityModel.savePreferences() now calls savePreferences() for all detail models
+  LocalEntityConnection.update() bug fixed, refactored
+  LocalEntityConnection.doSelectMany() method logging added for result packing
